[gd_scene load_steps=13 format=3 uid="uid://by6shptjmpnl3"]

[ext_resource type="Script" path="res://Scripts/grunt_enemy.gd" id="1_15vax"]
[ext_resource type="Texture2D" uid="uid://dstqrplfbf6xb" path="res://Graphics/Characters/Enemies/WalkingGrunts.png" id="1_j536y"]
[ext_resource type="PackedScene" uid="uid://bltrrdetnuw22" path="res://hurtbox.tscn" id="3_dsgwk"]
[ext_resource type="PackedScene" uid="uid://c7fwctti5sod1" path="res://hitbox.tscn" id="4_0qkcy"]

[sub_resource type="Animation" id="Animation_50kmv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_umsln"]
resource_name = "V1_Idle"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jdlhy"]
resource_name = "V1_Walk"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.27984),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5ujy"]
_data = {
"RESET": SubResource("Animation_50kmv"),
"V1_Idle": SubResource("Animation_umsln"),
"V1_Walk": SubResource("Animation_jdlhy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0clb"]
size = Vector2(6, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7d65g"]
radius = 3.0
height = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6lqi"]
size = Vector2(8, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_pj8kk"]
radius = 54.0093

[node name="EnemyGrunt" type="CharacterBody2D"]
y_sort_enabled = true
scale = Vector2(-1, 1)
collision_layer = 8
collision_mask = 77
script = ExtResource("1_15vax")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j536y")
hframes = 2
vframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v5ujy")
}

[node name="Hurtbox" parent="." instance=ExtResource("3_dsgwk")]
visible = false
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_k0clb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_7d65g")

[node name="Hitbox" parent="." instance=ExtResource("4_0qkcy")]
visible = false
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_k6lqi")

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_pj8kk")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]

[editable path="Hurtbox"]
